--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,12 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
 
     compile group: 'chat.dim', name: 'DaoKeDao', version: '1.0+'
     compile group: 'chat.dim', name: 'MingKeMing', version: '1.0+'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 uploadArchives {
