--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,12 @@ plugins {
 
 group 'chat.dim'
 //version '1.0-SNAPSHOT'
-version '0.1'
+version '0.2'
 
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     jcenter()
     mavenCentral()
 }
@@ -30,8 +31,8 @@ repositories {
 dependencies {
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
 
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.1+'
-    compile group: 'chat.dim', name: 'MingKeMing', version: '0.1+'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '[0.1,)'
+    compile group: 'chat.dim', name: 'MingKeMing', version: '[0.1,)'
 
     testCompile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -59,7 +60,7 @@ install {
             project {
                 packaging 'jar'
                 name 'DIMP'
-                description 'New protocol designed for decentralized instant messaging.'
+                description 'New Protocol designed for decentralized instant messaging.'
                 url siteUrl
                 licenses {
                     license {
@@ -135,7 +136,7 @@ bintray {
         userOrg = 'dimchat'
         repo = 'core'
         name = 'dimp'
-        desc = 'New protocol designed for decentralized instant messaging.'
+        desc = 'New Protocol designed for decentralized instant messaging.'
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ['MIT']
