--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ repositories {
 dependencies {
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
 
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '[0.1,)'
-    compile group: 'chat.dim', name: 'MingKeMing', version: '[0.1,)'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '[0.2,)'
+    compile group: 'chat.dim', name: 'MingKeMing', version: '[0.2,)'
 
     testCompile group: 'com.alibaba', name: 'fastjson', version: '1.2.47'
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -73,6 +73,10 @@ install {
                         id 'moky'
                         name 'Albert Moky'
                         email 'albert.moky@gmail.com'
+                        roles {
+                            role 'architect'
+                        }
+                        organization 'DIM Group'
                     }
                 }
                 scm {
