--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
 
 group 'chat.dim'
 //version '1.0-SNAPSHOT'
-version '0.5.6'
+version '0.5.7'
 
 sourceCompatibility = 1.8
 
@@ -29,8 +29,8 @@ repositories {
 }
 
 dependencies {
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.5.1'
-    compile group: 'chat.dim', name: 'MingKeMing', version: '0.5.3'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.5.+'
+    compile group: 'chat.dim', name: 'MingKeMing', version: '0.5.+'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
