--- a/DIMP/build.gradle
+++ b/DIMP/build.gradle
@@ -18,7 +18,7 @@ plugins {
 
 group 'chat.dim'
 //version '1.0-SNAPSHOT'
-version '0.6.6'
+version '0.6.8'
 
 sourceCompatibility = 1.8
 
@@ -29,9 +29,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.6.3'
-    compile group: 'chat.dim', name: 'MingKeMing', version: '0.6.6'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.6.5'
+    compile group: 'chat.dim', name: 'MingKeMing', version: '0.7.0'
 
+    testCompile group: 'chat.dim', name: 'MingKeMingPlus', version: '0.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
