--- a/DIMP/build.gradle
+++ b/DIMP/build.gradle
@@ -18,7 +18,7 @@ plugins {
 
 group 'chat.dim'
 //version '1.0-SNAPSHOT'
-version '0.7.10'
+version '0.7.11'
 
 sourceCompatibility = 1.8
 
@@ -29,7 +29,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.6.9'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.6.10'
     compile group: 'chat.dim', name: 'MingKeMing', version: '0.7.3'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -130,6 +130,19 @@ bintray {
     } else {
         user = System.getenv('bintray.user')
         key = System.getenv('bintray.apikey')
+        String pwd = System.getenv('bintray.gpg.password')
+        if (user == null) {
+            user = bintray_user
+        }
+        if (key == null) {
+            key = bintray_apikey
+        }
+        if (pwd == null) {
+            pwd = bintray_gpg_password
+        }
+        properties.setProperty('bintray.user', user)
+        properties.setProperty('bintray.apikey', key)
+        properties.setProperty('bintray.gpg.password', pwd)
     }
 
     configurations = ['archives']
