--- a/DIMP/build.gradle
+++ b/DIMP/build.gradle
@@ -20,6 +20,12 @@ group 'chat.dim'
 //version '1.0-SNAPSHOT'
 version '0.9.8'
 
+def mod = 'DIMP'
+def desc = 'New Protocol designed for decentralized instant messaging.'
+
+def gitUrl = 'https://github.com/dimchat/core-java.git'
+def siteUrl = 'https://github.com/dimchat/core-java'
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -29,7 +35,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.9.4'
+    compile group: 'chat.dim', name: 'DaoKeDao', version: '0.9.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -46,17 +52,14 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-def gitUrl = 'https://github.com/dimchat/core-java.git'
-def siteUrl = 'https://github.com/dimchat/core-java'
-
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
         pom {
             project {
                 packaging 'jar'
-                name 'DIMP'
-                description 'New Protocol designed for decentralized instant messaging.'
+                name mod
+                description desc
                 url siteUrl
                 licenses {
                     license {
@@ -135,8 +138,8 @@ uploadArchives {
 
             pom.project {
                 packaging 'jar'
-                name 'DIMP'
-                description 'New Protocol designed for decentralized instant messaging.'
+                name mod
+                description desc
                 url siteUrl
                 licenses {
                     license {
